...
            "state" : "translated",
            "value" : "%lld more items to complete!"
          }
        }
      }
    },
    "あとで設定する" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Set Up Later"
          }
...
            "state" : "translated",
            "value" : "About %lld hours"
          }
        }
      }
    },
    "はじめる" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Get Started"
          }
...
            "state" : "translated",
            "value" : "No applications yet"
          }
        }
      }
    },
    "みんなの募集" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Browse postings"
          }
...
            "state" : "translated",
            "value" : "Say hi in the group chat"
          }
        }
      }
    },
    "グループトークを開く" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Open group chat"
          }
...
            "state" : "translated",
            "value" : "Please enter a nickname"
          }
        }
      }
    },
    "パスワード" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Password"
          }
...
            "state" : "translated",
            "value" : "Your profile, groups, group chat history, and all other data will be permanently deleted. This cannot be undone."
          }
        }
      }
    },
    "プロフィールを確認・編集" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "View & Edit Profile"
          }
...
            "state" : "translated",
            "value" : "Hospitality Management"
          }
        }
      }
    },
    "マイページ" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "My Page"
          }
...
            "state" : "translated",
            "value" : "If you don't receive the email"
          }
        }
      }
    },
    "メールアドレス" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Email address"
          }
...
            "state" : "translated",
            "value" : "Log out?"
          }
        }
      }
    },
    "ログイン" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Log In"
          }
...
            "state" : "translated",
            "value" : "Accounting"
          }
        }
      }
    },
    "何をしますか?" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "What are you planning?"
          }
...
            "state" : "translated",
            "value" : "Geology"
          }
        }
      }
    },
    "基本情報" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Basic Info"
          }
...
            "state" : "translated",
            "value" : "Withdraw application"
          }
        }
      }
    },
    "応募一覧" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Applications"
          }
...
            "state" : "translated",
            "value" : "Mechanical Engineering"
          }
        }
      }
    },
    "次へ" : {
      "comment" : "A button that navigates to the next onboarding page.",
      "isCommentAutoGenerated" : true,
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
...
            "state" : "translated",
            "value" : "I love museums & art"
          }
        }
      }
    },
    "自分が主催" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Hosted by me"
          }
...
            "state" : "translated",
            "value" : "Close"
          }
        }
      }
    },
    "集まり" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Gatherings"
          }
        }
      }
    },
    "集まりの詳細" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Gathering details"
          }
...
