...
                ToolbarItem(placement: .cancellationAction) {
                    Button {
                        dismiss()
                    } label: {
                        Image(systemName: "xmark")
                    }
                    .accessibilityIdentifier("closeCreateGatheringButton")
                }
                ToolbarItem(placement: .confirmationAction) {
                    Button {
                        guard let image = selectedImage else { return }
                        Task {
                            isSubmitting = true
...
